computing total price for each shop

--- a/app/templates/shops/shop/products.hbs
+++ b/app/templates/shops/shop/products.hbs
@@ -4,7 +4,7 @@
     {{#product- product=product}}{{/product-}}
 {{/each}}
 
-
+<h1>Total Price: {{model.totalPrice}}</h1>
 
 {{#if isAddingProduct}}
   {{input value=newProductName  placeholder="Name"}}
