--- a/app/templates/components/product-.hbs
+++ b/app/templates/components/product-.hbs
@@ -1,17 +1,21 @@
 {{#if isEditingProduct}}
-  <li>
-  {{input value=product.name  placeholder="Name"}}
-  {{input value=product.price  placeholder="Price"}}
-  {{input value=product.quantity  placeholder="Quantity"}}
-  <button  {{action 'saveProduct'}}>SAVE</button>
-  <button {{action 'cancelEditingProduct'}}>CANCEL</button>
-  </li>
+  <tr>
+    <td>{{input value=product.name  placeholder="Name"}}</td>
+    <td>{{input value=product.price  placeholder="Price"}}</td>
+    <td>{{input value=product.quantity  placeholder="Quantity"}}</td>
+
+    <button class="saveButton button" {{action 'saveProduct'}}>SAVE</button>
+    <button class="cancelButton button" {{action 'cancelEditingProduct'}}>CANCEL</button>
+
+  </tr>
 {{else}}
-  <li>
-    {{product.name}} ---    {{product.price}} ---    {{product.quantity}} ---
-    <button  {{action 'editProduct'}}>EDIT</button>
-    <button {{action 'deleteProduct' product}}>DELETE</button>
-  </li>
+  <tr>
+    <td>{{product.name}}</td>
+    <td>{{product.price}}</td>
+    <td>{{product.quantity}}</td>
+    <button class="editButton button" {{action 'editProduct'}}>EDIT</button>
+    <button class="deleteButton button" {{action 'deleteProduct' product}}>DELETE</button>
+  </tr>
 {{/if}}
 
 
