--- a/app/templates/shops/shop/products.hbs
+++ b/app/templates/shops/shop/products.hbs
@@ -1,17 +1,25 @@
 <h1>SHOPS/{{model.name}}</h1>
 
+<table style="width:60%">
+<tr>
+  <th><h3>NAME</h3></th>
+  <th><h3>QTY</h3></th>
+  <th><h3>PRICE</h3></th>
+</tr>
+
 {{#each model.products as |product|}}
     {{#product- product=product}}{{/product-}}
 {{/each}}
 
 <h1>Total Price: {{model.totalPrice}}</h1>
+</table>
 
 {{#if isAddingProduct}}
   {{input value=newProductName  placeholder="Name"}}
   {{input value=newProductPrice  placeholder="Price"}}
   {{input value=newProductQuantity  placeholder="Quantity"}}
-  <button  {{action 'addSavedProduct'}}>Save & Add</button>
+  <button class="saveButton button" {{action 'addSavedProduct'}}>Save & Add</button>
   <button {{action 'cancelAddProduct'}}>CANCEL</button>
 {{else}}
-    <button  {{action 'addProduct'}}>ADD PRODUCT</button>
+    <button class="addButton button" {{action 'addProduct'}}>Add Product</button>
 {{/if}}
